k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloud-filer-service
  namespace: dev
spec:
  selector:
    app: cloud-filer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3121
  type: ClusterIP
